--- a/rest-countries-app/src/app/Home/Home.component.css
+++ b/rest-countries-app/src/app/Home/Home.component.css
@@ -2,15 +2,14 @@
   margin-bottom: 45px;
 }
 
+.detialed {
+  margin-bottom: 45px;
+}
+
 @media only screen and (max-width: 400px) {
   .detialed {
     margin-left: 9px;
   }
 }
 
-@media (min-width: 1450px) {
-  .detialed {
-    width: 2405px;
-    margin: auto;
-  }
-}
+
