--- a/rest-countries-app/src/app/Home/sub-header/sub-header.component.css
+++ b/rest-countries-app/src/app/Home/sub-header/sub-header.component.css
@@ -36,7 +36,7 @@
 
 input {
   color: var(--searchInputTextColor);
-  font-family: "Nunito Sans";
+  font-family: "Nunito Sans", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -147,43 +147,3 @@ input {
   }
 }
 
-@media (min-width: 1450px) {
-  .search-input {
-    width: 500px;
-    height: 70px;
-  }
-
-  .sub-container {
-    width: 321px;
-  }
-  
-  .dropbtn {
-    width: 275px;
-  }
-
-  .dropdown-content {
-    width: 277px;
-    height: 200px;
-    margin-top: 261px;
-  }
-
-  .dropdown-content a {
-    font-size: 25px;
-    padding: 9px 16px;
-  }
-
-  input {
-    font-size: 25px;
-  }
-  
-.color-icon-1{
-  font-size: 1.0em;
-}
-  .color-icon-2 {
-    font-size: 0.80em;
-  }
-
-  .txt {
-    font-size: 25px;
-  }
-}
