--- a/rest-countries-app/src/app/app.component.css
+++ b/rest-countries-app/src/app/app.component.css
@@ -11,8 +11,8 @@
 }
 
 .home {
-  margin-left: 47px;
-  margin-right: 74px;
+  margin-left: 78px;
+  margin-right: 80px;
 }
 
 .country {
